changed h1 font-family due to overflowing issue on iPhones

--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ li {
 }
 
 h1 {
-	font-family: 'Bad Script', cursive;
+	font-family: 'Cookie', cursive;
 	font-size: 3rem;
 	z-index: 2;
 	color: white;
